--- a/start/templates/start/front.html
+++ b/start/templates/start/front.html
@@ -1,12 +1,12 @@
 {% extends "admin/base_site.html" %}
 
-{% load i18n static admin_modify grp_tags %}
+{% load i18n static %}
 
 {% block branding %}
     <div id="grp-branding"><img src="{% static 'start/img/equinox.png' %}" height="24"/></div>
 {% endblock %}
 
-{% block title %}openNPL{% endblock %}
+{% block title %}equinox{% endblock %}
 
 {% block extrastyle %}
     <link href="{% static 'start/css/styling.css' %}" rel="stylesheet" type="text/css"/>
