--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -1,6 +1,6 @@
 {% extends 'admin/base.html' %}
 
-{% load static %}{% load i18n grp_tags %}
+{% load static %}{% load i18n %}
 
 {% block extrastyle %}
     <link href="{% static 'start/css/styling.css' %}" rel="stylesheet" type="text/css"/>
