--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,5 +1,5 @@
 {% extends "admin/base_site.html" %}
-{% load i18n grp_tags static %}
+{% load i18n static %}
 
 {% block branding %}
     <div id="grp-branding"><img src="{% static 'start/img/equinox.png' %}" height="24" alt="logo"/></div>
