--- a/start/templates/start/front.html
+++ b/start/templates/start/front.html
@@ -11,43 +11,40 @@
             <img src="{% static 'start/img/equinox-large.png' %}" height="100"/>
         </div>
         <div class="text">
-            <h3> Equinox is an open source platform that supports the holistic risk management of major spatial finance
-                projects such as project finance.</h3>
+            <h3>Equinox is an open source platform that supports the holistic risk management of sustainable finance projects</h3>
         </div>
     </div>
 
     <hr style="color: white">
     <h2>Welcome to Equinox</h2>
 
-    <h3>Focus on the challenge of Sustainability in Project Finance context</h3>
-    <p>Sustainability (both environmental and social) is a serious and ongoing issue that affects all economies.
-        Developing tools and methodologies that improve the ability of all stakeholders to assess and report risks is
-        thus an important objective</p>
+    <h3>The Equinox platform focus on the challenge of Sustainability in Project Finance context</h3>
+    <p>Sustainability (both environmental and social) is a major issue that affects all economies. Developing tools and methodologies that improve the ability of all stakeholders to assess and report risks is an important objective and Equinox aims to help carry out this process as optimally as possible.</p>
 
     <h3>What exactly is Equinox?</h3>
-    <p>Equinox is a <i>database and web application</i> that works together with a tailored data schema to provide easy
-        access to Project Finance data adhering to the regulatory and ESG initiative recommendations. Running the
-        application creates a <i>server</i> that can then be accessed via any regular browser. For easy installation and
-        testing the current release uses an sqlite database instead of a production database.</p>
+    <p>Equinox is a both <i>a database and a web application</i> that works together with a tailored <i>data schema</i> to provide easy access to sustainability data adhering to both regulatory requirements, protocols and recommendations and financial industry initiatives. </p>
+
+    <h3>How does it work?</h3>
+    <p>Running the application creates a <i>server</i> that can then be accessed via any regular web browser. NB: For easy installation and testing the current release uses a self-contained sqlite database instead of a production database server</p>
 
     <p>The initial functionality of Equinox focuses on integrating the following concepts</p>
 
     <ul>
-        <li> The European Banking Authority's Criteria for the Credit Risk Assessment of Project Finance under the
+        <li>The European Banking Authority's Criteria for the Credit Risk Assessment of Project Finance under the
             Standardized approach for Specialized Lending
         </li>
-        <li> The PCAF accounting and reporting recommendations for Project Finance GHG emissions</li>
-        <li> The Equator Principles</li>
+        <li>The PCAF accounting and reporting recommendations for Project Finance GHG emissions </li>
+        <li>The GHG Protocol for accounting for CO2 emissions</li>
+        <li>The Equator Principles</li>
     </ul>
 
     <p>Once the platform is up and running a wealth of functionality is available.</p>
-
 
     <h3>User Functionality</h3>
 
     <ul>
         <li>A user can log-in into the application with their credentials</li>
-        <li>Inspect the available data sets (tables or relations) that capture the EBA / EP / PCAF Data
+        <li>Inspect the available data sets (tables or relations) that capture the EBA / EP / PCAF / GHG Protocol Data
             requirements
         </li>
         <li>Insert, Update or Delete records (e.g. new Project Data)</li>
@@ -68,8 +65,7 @@
     </ul>
 
     <h3>Join the Equinox community</h3>
-    <p>
-        The project aims to be driven by community needs. We welcome code contributions and feature requests via <a href="https://github.com/open-risk/equinox">github</a>.
+    <p>The project aims to be driven by community needs. We welcome code contributions and feature requests via <a href="https://github.com/open-risk/equinox">github</a>.
     </p>
 
 
