--- a/start/templates/start/front.html
+++ b/start/templates/start/front.html
@@ -8,7 +8,7 @@
 
     <div class="container">
         <div class="image">
-            <img src="{% static 'start/img/equinox-large.png' %}" height="100"/>
+            <img src="{% static 'start/img/equinox-large.png' %}" height="100" alt="Equinox Logo"/>
         </div>
         <div class="text">
             <h3>Equinox is an open source platform that supports the holistic risk management of sustainable finance projects</h3>
