--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -4,7 +4,7 @@
 
 {% block extrastyle %}
     <link href="{% static 'start/css/styling.css' %}" rel="stylesheet" type="text/css"/>
-    <link rel="shortcut icon" type="image/png" href="{% static 'start/img/favicon.ico' %}"/>
+    <link rel="shortcut icon" type="image/png" href="{% static 'start/img/equinox.png' %}"/>
 {% endblock %}
 
 
