--- a/start/templates/start/front.html
+++ b/start/templates/start/front.html
@@ -11,21 +11,27 @@
             <img src="{% static 'start/img/equinox-large.png' %}" height="100" alt="Equinox Logo"/>
         </div>
         <div class="text">
-            <h3>Equinox is an open source platform that supports the holistic risk management of sustainable finance projects</h3>
+            <h3>{% trans "Equinox is an open source platform that supports the holistic risk management of sustainable finance projects" %}</h3>
         </div>
     </div>
 
     <hr style="color: white">
-    <h2>Welcome to Equinox</h2>
+    <h2>{%  trans "Welcome to Equinox"  %}</h2>
 
     <h3>The Equinox platform focus on the challenge of Sustainability in Project Finance context</h3>
-    <p>Sustainability (both environmental and social) is a major issue that affects all economies. Developing tools and methodologies that improve the ability of all stakeholders to assess and report risks is an important objective and Equinox aims to help carry out this process as optimally as possible.</p>
+    <p>Sustainability (both environmental and social) is a major issue that affects all economies. Developing tools and
+        methodologies that improve the ability of all stakeholders to assess and report risks is an important objective
+        and Equinox aims to help carry out this process as optimally as possible.</p>
 
     <h3>What exactly is Equinox?</h3>
-    <p>Equinox is a both <i>a database and a web application</i> that works together with a tailored <i>data schema</i> to provide easy access to sustainability data adhering to both regulatory requirements, protocols and recommendations and financial industry initiatives. </p>
+    <p>Equinox is a both <i>a database and a web application</i> that works together with a tailored <i>data schema</i>
+        to provide easy access to sustainability data adhering to both regulatory requirements, protocols and
+        recommendations and financial industry initiatives. </p>
 
     <h3>How does it work?</h3>
-    <p>Running the application creates a <i>server</i> that can then be accessed via any regular web browser. NB: For easy installation and testing the current release uses a self-contained sqlite database instead of a production database server</p>
+    <p>Running the application creates a <i>server</i> that can then be accessed via any regular web browser. NB: For
+        easy installation and testing the current release uses a self-contained sqlite database instead of a production
+        database server</p>
 
     <p>The initial functionality of Equinox focuses on integrating the following concepts</p>
 
@@ -33,7 +39,7 @@
         <li>The European Banking Authority's Criteria for the Credit Risk Assessment of Project Finance under the
             Standardized approach for Specialized Lending
         </li>
-        <li>The PCAF accounting and reporting recommendations for Project Finance GHG emissions </li>
+        <li>The PCAF accounting and reporting recommendations for Project Finance GHG emissions</li>
         <li>The GHG Protocol for accounting for CO2 emissions</li>
         <li>The Equator Principles</li>
     </ul>
@@ -65,7 +71,8 @@
     </ul>
 
     <h3>Join the Equinox community</h3>
-    <p>The project aims to be driven by community needs. We welcome code contributions and feature requests via <a href="https://github.com/open-risk/equinox">github</a>.
+    <p>The project aims to be driven by community needs. We welcome code contributions and feature requests via <a
+            href="https://github.com/open-risk/equinox">github</a>.
     </p>
 
 
