--- a/start/templates/start/generic.html
+++ b/start/templates/start/generic.html
@@ -2,4 +2,8 @@
 
 {% load static %}
 
+{% block extrahead %}
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'start/img/equinox.png' %}"/>
+    <script type="text/javascript" charset="utf-8" src="{% static 'start/js/jquery.js' %}"></script>jquery.js
+{% endblock %}
 
