--- a/templates/admin/change_list.html
+++ b/templates/admin/change_list.html
@@ -2,6 +2,5 @@
 {% load i18n admin_urls %}
 
 {% block content_title %}
-    {{ cl.opts.verbose_name_plural|capfirst }}
-    <a href="{% url 'django-admindocs-docroot' %}models/{{ opts.app_label }}.{{ opts.model_name }}">(docs)</a>
+    <a href="{% url 'django-admindocs-docroot' %}models/{{ opts.app_label }}.{{ opts.model_name }}">{{ cl.opts.verbose_name_plural|capfirst }}</a>
 {% endblock %}
