--- a/start/templates/start/topbar.html
+++ b/start/templates/start/topbar.html
@@ -1,18 +1,16 @@
 <li class="nav-item d-none d-sm-inline-block dropdown">
     <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
-       aria-expanded="false">
-        Impact
-    </a>
-    <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="/results_explorer/ghg_reduction">GHG Reduction</a></li>
-    </ul>
-</li>
-<li class="nav-item d-none d-sm-inline-block dropdown">
-    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
-       aria-expanded="false">
-        Status
-    </a>
+       aria-expanded="false">Portfolio Status</a>
     <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="/results_explorer/gpc_report">GPC Report</a></li>
+        <li><a class="dropdown-item" href="/results_explorer/pcaf_mortgage_report">PCAF Mortgage Report</a></li>
+    </ul>
+</li>
+
+<li class="nav-item d-none d-sm-inline-block dropdown">
+    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
+       aria-expanded="false">Portfolio Impact</a>
+    <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="/results_explorer/ghg_reduction">GHG Reduction</a></li>
     </ul>
 </li>
