--- a/results_explorer/templates/pcaf_mortgage_report.html
+++ b/results_explorer/templates/pcaf_mortgage_report.html
@@ -37,7 +37,7 @@
                 </div>
 
                 <div class="card card-body">
-                    <table id="data_list">
+                    <table id="data_list" class="display responsive" width="100%">
                         <thead>
                         <tr>
                             {% for entry in TableHeader %}
