Further work on procurement emissions reports

--- a/start/templates/start/front.html
+++ b/start/templates/start/front.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="card card-body">
-                    <p>The Equinox platform focus on the challenge of Sustainability in Project Finance context</p>
+                    <p>The Equinox platform focus on the challenge of Sustainable Portfolio Management</p>
 
                     <p>Sustainability (both environmental and social) is a major issue that affects all economies. Developing tools and methodologies that improve the ability of all stakeholders to assess and report risks is an important objective and Equinox aims to help carry out this process as optimally as possible.</p>
 
@@ -47,18 +47,18 @@
                     <h4>How does it work?</h4>
                 </div>
                 <div class="card card-body">
-                    <p>Running the application creates a
-                        <i>server</i> that can then be accessed via any regular web browser. NB: For easy installation and testing the current release uses a self-contained sqlite database instead of a production database server
+                    <p>Running the application creates a <i>server</i> that can then be accessed via any regular web browser. NB: For easy installation and testing the current release uses a self-contained sqlite database instead of a production database server
                     </p>
 
                     <p>The initial functionality of Equinox focuses on integrating the following concepts</p>
 
                     <ul>
-                        <li>The European Banking Authority's Criteria for the Credit Risk Assessment of Project Finance under the Standardized approach for Specialized Lending
+                        <li>Implementing the GHG Protocol for accounting for CO2 emissions via inventories, activities and emission factors</li>
+                        <li>The PCAF accounting and reporting framework (currently for Project Finance and Mortgage Finance GHG emissions)</li>
+                        <li>Support for Green Public Procurement through the integration of TED data models and associated ontologies</li>
+                        <li>Holistic risk management with the integration of the European Banking Authority's Criteria (currently Credit Risk Assessment of Project Finance under the Standardized approach for Specialized Lending)
                         </li>
-                        <li>The PCAF accounting and reporting recommendations for Project Finance GHG emissions</li>
-                        <li>The GHG Protocol for accounting for CO2 emissions</li>
-                        <li>The Equator Principles</li>
+                        <li>Support for monitoring the Equator Principles for Project Finance</li>
                     </ul>
 
                     <p>Once the platform is up and running a wealth of functionality is available.</p>
@@ -74,11 +74,10 @@
                 <div class="card card-body">
                     <ul>
                         <li>A user can log-in into the application with their credentials</li>
-                        <li>Inspect the available data sets (tables or relations) that capture the EBA / EP / PCAF / GHG Protocol Data requirements
-                        </li>
+                        <li>Inspect available data sets (tables or relations) that capture the EBA / EP / PCAF / GHG Protocol Data requirements, including a variety of relevant reference data available as Open Data</li>
                         <li>Insert, Update or Delete records (e.g. new Project Data)</li>
-                        <li>Consult the documentation as to the meaning and requirements of each data element (TODO)
-                        </li>
+                        <li>Consult the documentation as to the meaning and requirements of each data element</li>
+                        <li>Create Reports about both current Portfolio Status versus environmental impact and assessing the Impact of activities (e.g., investment policies) planned for the future</li>
                     </ul>
                 </div>
 
@@ -113,9 +112,7 @@
                     <h3>Join the Equinox community</h3>
                 </div>
                 <div class="card card-body">
-                    <p>The project aims to be driven by community needs. We welcome code contributions and feature requests via
-                        <a
-                                href="https://github.com/open-risk/equinox">github</a>.
+                    <p>The project aims to be driven by community needs. We welcome issues, code contributions and feature requests via <a href="https://github.com/open-risk/equinox">github</a>.
                     </p>
                 </div>
             </div>
