--- a/start/templates/start/topbar.html
+++ b/start/templates/start/topbar.html
@@ -5,6 +5,7 @@
         <li><a class="dropdown-item" href="/results_explorer/gpc_report">GPC Report</a></li>
         <li><a class="dropdown-item" href="/results_explorer/pcaf_mortgage_report">PCAF Mortgage Report</a></li>
         <li><a class="dropdown-item" href="/results_explorer/portfolio_map">Portfolio Map</a></li>
+        <li><a class="dropdown-item" href="/results_explorer/gpp_report">GPP Report</a></li>
     </ul>
 </li>
 
