--- a/reporting/templates/gpp_report.html
+++ b/reporting/templates/gpp_report.html
@@ -10,12 +10,12 @@
 {% block extrahead %}
     {{ block.super }}
     <script type="text/javascript" charset="utf-8"
-            src="{% static 'results_explorer/js/jquery.dataTables.js' %}"></script>
+            src="{% static 'reporting/js/jquery.dataTables.js' %}"></script>
 {% endblock %}
 
 {% block extrastyle %}
     {{ block.super }}
-    <link rel="stylesheet" type="text/css" href="{% static 'results_explorer/css/table.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'reporting/css/table.css' %}">
 {% endblock %}
 
 {% block messages %}
