--- a/reporting/templates/visualization.html
+++ b/reporting/templates/visualization.html
@@ -34,7 +34,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    {% include "results_explorer/vs_breadcrumb.html" %}
+    {% include "reporting/vs_breadcrumb.html" %}
 {% endblock %}
 
 {% block content %}
