--- a/start/templates/start/topbar.html
+++ b/start/templates/start/topbar.html
@@ -2,10 +2,10 @@
     <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
        aria-expanded="false">Portfolio Status</a>
     <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="/results_explorer/gpc_report">GPC Report</a></li>
-        <li><a class="dropdown-item" href="/results_explorer/pcaf_mortgage_report">PCAF Mortgage Report</a></li>
-        <li><a class="dropdown-item" href="/results_explorer/portfolio_map">Portfolio Map</a></li>
-        <li><a class="dropdown-item" href="/results_explorer/gpp_report">GPP Report</a></li>
+        <li><a class="dropdown-item" href="/reporting/gpc_report">GPC Report</a></li>
+        <li><a class="dropdown-item" href="/reporting/pcaf_mortgage_report">PCAF Mortgage Report</a></li>
+        <li><a class="dropdown-item" href="/reporting/portfolio_map">Portfolio Map</a></li>
+        <li><a class="dropdown-item" href="/reporting/gpp_report">GPP Report</a></li>
     </ul>
 </li>
 
@@ -13,6 +13,6 @@
     <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
        aria-expanded="false">Portfolio Impact</a>
     <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="/results_explorer/ghg_reduction">GHG Reduction</a></li>
+        <li><a class="dropdown-item" href="/reporting/ghg_reduction">GHG Reduction</a></li>
     </ul>
 </li>
